# Python-FinanceData

./: .gitignore  README.md  bt.py  bt_gemini.py  config.py  data_handler.py  db_sort.py  graph.py  graph_gemini.py  import_csv_to_plot.py  init_data.py  init_data_gemini.py  name.py  portfolio_manager.py  pyproject.toml  rebalance.py  reblance.py  reporting.py  s_monthly.py  stock.ipynb  stock_value.py  strategies.py
be/: backtest_engine.py  config.py  main.py  portfolio_manager.py  pyproject.toml  reporting.py
db/: finance.db.zst
