[project]
name = "showmethemony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finance-datareader>=0.9.96",
    "holidays>=0.82",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "six>=1.17.0",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "beautifulsoup4>=4.14.2",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.3",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.60.1",
    "idna>=3.10",
    "kiwisolver>=1.4.9",
    "lxml>=6.0.2",
    "narwhals>=2.7.0",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "pyparsing>=3.2.5",
    "requests-file>=2.1.0",
    "soupsieve>=2.8",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0"
]
